<resources>
    <string name="app_name">咕咚运动健身食谱模块</string>

    // ========== 首页 ==========
    <string name="title_activity_start">咕咚食谱模块</string>
    <string name="title_content">健身食谱\n推荐模块</string>

    // ========== 列表页面 ==========
    <string name="menu_des_image">左侧菜品图片</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">"菜品详情加载中...\n"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_login">User Login</string>

    <string name="content">你好!</string>
    <string name="content_title">你好黄毛分尸现场!!!!!!!!11!</string>
    <string name="btn_label">点我</string>
    <string name="text_edit">请输入</string>
    <string name="title_activity_vegetable_detail">标题加载中...</string>
    <string name="title_activity_steps">详细步骤</string>
    <string name="edit_info">编辑个人资料</string>
    <string name="ok">确认</string>
    <string name="edit_portrait">修改头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="hobbies">兴趣</string>
    <string name="autograph">个性签名</string>
    <string name="goal">运动目的</string>
    <string name="goal_weight">目标体重:</string>
    <string name="goal_time">目标天数:</string>
    <string name="body_info">身体指标(非公开)</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="cancel">取消</string>
    <string name="jianfei" />
    <string name="month" />
    <string name="height_weight">身高 体重</string>
    <string name="run">跑步</string>
    <string name="ride">骑行</string>
    <string name="soccer" />
    <string name="bendixiangce">本地相册选取头像</string>
    <string name="paizhao">手机拍照选取头像</string>
    <string name="man">男</string>
    <string name="woman">女</string>
</resources>
